--- a/website/src/pages/styles.module.css
+++ b/website/src/pages/styles.module.css
@@ -160,7 +160,7 @@
 }
 
 [data-theme="dark"] .backToTopButton {
-  background-color: #0284C7;
+  background-color: #0076B3;
 }
 
 [data-theme="dark"] .backToTopButton:hover {
